--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
 /* Footer */
 
 footer {
- 
+    height: 300px;
     width: 100%;
     background-color: #323128;
     color: #EDEDEC;
@@ -62,7 +62,7 @@ footer img {
 }
 
 .box-contat{
- 
+    height: 50px;
     width: 40%;
     
     margin-top: 2rem;
@@ -71,7 +71,7 @@ footer img {
 }
 
 .copyright{
-   
+    height: 50px;
     background-color:#0E0F12;
     text-align: center;
     padding-top: 4px ;
@@ -87,6 +87,7 @@ footer img {
 }
 .map{
     width: 100%;
+    
 }
 
 
